# agent

baseline/zion/: Dockerfile  Makefile  README.md  base-image.Dockerfile  conveyor.jsonnet  helix-info.yaml  mkdocs.yml  pyproject.toml
baseline/zion/ci-jobs/: ci.gitlab-ci.yml
baseline/zion/configs/: dev.ini  prd.ini  secret.ini  secret.ini.example  stg.ini
baseline/zion/credentials/: google_doc_credentials.json
baseline/zion/databases/mysql/: 0000-create-agent_execution_trail.sql  0001-create-agent_plugin.sql  0002-insert-common_agent_plugins.sql  0003-update-common_agent_plugins.sql  0004-insert-common_agent_plugins.sql  0005-insert-jql_agent_plugin.sql  0006-insert-knowledge_base_search_plugin.sql  0007-insert-sleep_delay_plugin.sql  0008-insert_gitlab_access_checker_plugin.sql  0009-insert_hades_kb_service_plugin.sql  0010-insert_kibana_search_plugin.sql  0011-update_hades-kb-service-plugin.sql  0012-update-agent_plugin-with-owner.sql  0013-insert_document_rag_hades_kb_service_plugin.sql  0014-update-agent_plugin-with-http_plugin_detail.sql  0015-insert_concedo_role_extractor_from_ldap_plugin.sql  0016-add-orchestrators_plugin_column.sql  0017-insert-orchestrators_plugin-data.sql  0018-insert-post-orchestrators_plugin_data.sql  0019-add-ec2_log_retriever_plugin.sql  0020-insert_download_mesh_inbound_plugin.sql  0021-insert_get_service_dependencies_plugin.sql  0022-insert_gitlab_endpoint_plugin.sql  0023-update-ec2_log_retriever_plugin.sql  0024-insert_get_service_platform_plugin.sql  0025-create-evaluation-results.sql  0026-insert_openai_web_search_plugin.sql  0026-update-evaluation-results.sql  0027-add-metrics-evaluation-results.sql  dbconfig.yml
baseline/zion/docs/: index.md  llm-evaluation_evaluating-llm-agent-and-actions-in-zion.md  zion-api-as-agent_getting-started.md  zion-api-as-agent_onboarding-guide.md  zion-api-as-agent_zion-agent-api-specification.md  zion-api-as-agent_zion-plugin.md
baseline/zion/playground/: main.py
baseline/zion/scripts/: db.json  db.py  submit_urs_report.py
baseline/zion/terraform/prd/: locals.tf  sgr.tf
baseline/zion/terraform/stg/: locals.tf  sgr.tf
baseline/zion/values/: production.yaml  staging.yaml
baseline/zion/zion/: config.py  gunicorn_conf.py  logger.py  main.py
baseline/zion/zion/agent/: agent_builder.py  agent_input_transformer.py  agent_output_parser.py  constant.py  model.py  mr_creation_automation_agent.py  mr_creation_automation_agent_classes.py  orchestrators_plugin.py  react_agent_builder.py  zion_agent.py  zion_agent_classes.py
baseline/zion/zion/credentials/: google.py
baseline/zion/zion/data/: agent_execution_trail.py  connection.py
baseline/zion/zion/evaluations/: custom_evaluator.py  db_client.py  deepeval_evaluator.py  langsmith_eval_dataset.py  langsmith_eval_handler.py  langsmith_evaluation.py  level_zero_test_cases.py  models.py  util.py
baseline/zion/zion/jobs/: daily_evaluation.py  job_runner.py  sync_agent_plugin.py
baseline/zion/zion/openapi/: constant.py  http_plugin.py  http_plugin_to_openapi.py  openapi20.py  openapi3x.py  openapi_plugin.py  util.py
baseline/zion/zion/stats/: datadog.py
baseline/zion/zion/tool/: agent_plugins.py  agent_tool.py  calculator_tool.py  concedo_role_extractor.py  constant.py  document_kb_search_tool.py  download_mesh_inbound.py  ec2_log_retriever.py  get_document_content.py  get_service_dependencies.py  get_service_platform.py  gitlab_access_checker.py  gitlab_endpoint.py  gitlab_job_trace_tool.py  gitlab_mr_creation_automation_tool.py  glean_listshortcuts.py  glean_search.py  hades_kb_service.py  jira_jql_search_tool.py  kibana_search_tool.py  knowledge_base_search_tool.py  openai_web_search_tool.py  openapi_tool.py  requests_tool.py  (+5 more)
(+150 files in other folders)
